// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MaskedInput applies custom global.hover theme to options 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  font-size: 22px;
  line-height: 28px;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c2::-moz-placeholder {
  color: #AAAAAA;
}

.c2:-ms-input-placeholder {
  color: #AAAAAA;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c1 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput applies custom global.hover theme to options 2`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
}

.c0:hover {
  background-color: lightgreen;
  color: #7D4CDB;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus >circle,
.c0:focus >ellipse,
.c0:focus >line,
.c0:focus >path,
.c0:focus >polygon,
.c0:focus >polyline,
.c0:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus ::-moz-focus-inner {
  border: 0;
}

.c0:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) >circle,
.c0:focus:not(:focus-visible) >ellipse,
.c0:focus:not(:focus-visible) >line,
.c0:focus:not(:focus-visible) >path,
.c0:focus:not(:focus-visible) >polygon,
.c0:focus:not(:focus-visible) >polyline,
.c0:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<button
  class="c0"
  id="listbox-option-1__item"
  tabindex="-1"
  type="button"
>
  <div
    class="c1"
  >
    bb
  </div>
</button>
`;

exports[`MaskedInput basic 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="off"
      class="c2"
      name="item"
      placeholder=""
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput basic renders outside grommet wrapper 1`] = `
.c1 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c1::-moz-placeholder {
  color: #AAAAAA;
}

.c1:-ms-input-placeholder {
  color: #AAAAAA;
}

.c1 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c1::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1:-moz-placeholder,
.c1::-moz-placeholder {
  opacity: 1;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <input
    autocomplete="off"
    class="c1"
    name="item"
    placeholder=""
    value=""
  />
</div>
`;

exports[`MaskedInput custom theme 1`] = `
.c3 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c3 g {
  fill: inherit;
  stroke: inherit;
}

.c3 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c3 *[stroke*='#'],
.c3 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c3 *[fill-rule],
.c3 *[FILL-RULE],
.c3 *[fill*='#'],
.c3 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  font-size: 22px;
  line-height: 28px;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  padding-left: 48px;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c4:focus >circle,
.c4:focus >ellipse,
.c4:focus >line,
.c4:focus >path,
.c4:focus >polygon,
.c4:focus >polyline,
.c4:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c4:focus ::-moz-focus-inner {
  border: 0;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: red;
  stroke: red;
}

.c2 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 12px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <svg
        aria-label="Search"
        class="c3"
        viewBox="0 0 24 24"
      >
        <path
          d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
          fill="none"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
    <input
      autocomplete="off"
      class="c4"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder=""
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput custom theme input font size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: 16px;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c2::-moz-placeholder {
  color: #AAAAAA;
}

.c2:-ms-input-placeholder {
  color: #AAAAAA;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c1 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="off"
      class="c2"
      placeholder=""
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput disabled 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  opacity: 0.3;
  cursor: default;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="off"
      class="c2"
      disabled=""
      name="item"
      placeholder=""
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput event target props are available option via keyboard 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.5rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput event target props are available option via mouse 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.375rem;
  line-height: 1.75rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  outline: none;
  border: none;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput event target props are available option via mouse 2`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.12);
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c1 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 6px;
  position: fixed;
  z-index: 110;
  outline: none;
  background-color: #ffffff;
  color: #555555;
  margin-top: 6px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

.c1 [class*=MaskedInput__ContainerBox] {
  padding-block: 6px;
  padding-inline: 6px;
  gap: 6px;
  display: flex;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 12px;
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 5px 12px;
  text-align: start;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  max-height: inherit;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="masked-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="c2 c3"
    id="listbox__item"
    role="listbox"
  >
    <div
      class="c4"
    >
      <button
        class="c5"
        id="listbox-option-0__item"
        tabindex="-1"
        type="button"
      >
        aa
      </button>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5"
        id="listbox-option-1__item"
        tabindex="-1"
        type="button"
      >
        bb
      </button>
    </div>
  </div>
</div>
`;

exports[`MaskedInput event target props are available option via mouse 3`] = `""`;

exports[`MaskedInput event target props are available option via mouse 4`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 gTmUcZ"
  >
    <input
      aria-activedescendant="listbox-option--1__item"
      aria-autocomplete="list"
      aria-controls="listbox__item"
      aria-expanded="true"
      autocomplete="off"
      class="StyledMaskedInput-sc-99vkfa-0 biiwE"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      role="combobox"
      value="aa!"
    />
  </div>
</div>
`;

exports[`MaskedInput icon 1`] = `
.c3 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c3 g {
  fill: inherit;
  stroke: inherit;
}

.c3 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c3 *[stroke*='#'],
.c3 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c3 *[fill-rule],
.c3 *[FILL-RULE],
.c3 *[fill*='#'],
.c3 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  padding-left: 42px;
}

.c4:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c4:focus >circle,
.c4:focus >ellipse,
.c4:focus >line,
.c4:focus >path,
.c4:focus >polygon,
.c4:focus >polyline,
.c4:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c4:focus ::-moz-focus-inner {
  border: 0;
}

.c4::-webkit-input-placeholder {
  color: #676767;
}

.c4::-moz-placeholder {
  color: #676767;
}

.c4:-ms-input-placeholder {
  color: #676767;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c4::-webkit-input-placeholder {
  font-weight: 400;
}

.c4::-moz-placeholder {
  font-weight: 400;
}

.c4:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c2 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 13px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <svg
        aria-label="Search"
        class="c3"
        viewBox="0 0 24 24"
      >
        <path
          d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
          fill="none"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
    <input
      autocomplete="off"
      class="c4"
      name="item"
      placeholder=""
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput icon reverse 1`] = `
.c3 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c3 g {
  fill: inherit;
  stroke: inherit;
}

.c3 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c3 *[stroke*='#'],
.c3 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c3 *[fill-rule],
.c3 *[FILL-RULE],
.c3 *[fill*='#'],
.c3 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  padding-right: 42px;
}

.c4:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c4:focus >circle,
.c4:focus >ellipse,
.c4:focus >line,
.c4:focus >path,
.c4:focus >polygon,
.c4:focus >polyline,
.c4:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c4:focus ::-moz-focus-inner {
  border: 0;
}

.c4::-webkit-input-placeholder {
  color: #676767;
}

.c4::-moz-placeholder {
  color: #676767;
}

.c4:-ms-input-placeholder {
  color: #676767;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c4::-webkit-input-placeholder {
  font-weight: 400;
}

.c4::-moz-placeholder {
  font-weight: 400;
}

.c4:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c2 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  right: 13px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <svg
        aria-label="Search"
        class="c3"
        viewBox="0 0 24 24"
      >
        <path
          d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
          fill="none"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
    <input
      autocomplete="off"
      class="c4"
      name="item"
      placeholder=""
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput mask 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      role="combobox"
      value="a"
    />
  </div>
</div>
`;

exports[`MaskedInput mask 2`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.12);
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c1 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 6px;
  position: fixed;
  z-index: 110;
  outline: none;
  background-color: #ffffff;
  color: #555555;
  margin-top: 6px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

.c1 [class*=MaskedInput__ContainerBox] {
  padding-block: 6px;
  padding-inline: 6px;
  gap: 6px;
  display: flex;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 12px;
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 5px 12px;
  text-align: start;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  max-height: inherit;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="masked-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="c2 c3"
    id="listbox__item"
    role="listbox"
  >
    <div
      class="c4"
    >
      <button
        class="c5"
        id="listbox-option-0__item"
        tabindex="-1"
        type="button"
      >
        aa
      </button>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5"
        id="listbox-option-1__item"
        tabindex="-1"
        type="button"
      >
        bb
      </button>
    </div>
  </div>
</div>
`;

exports[`MaskedInput mask 3`] = `""`;

exports[`MaskedInput mask with long fixed 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="https://"
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput match icon size to size prop when theme.icon.matchSize is true 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  font-size: 14px;
  line-height: 20px;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c2::-moz-placeholder {
  color: #AAAAAA;
}

.c2:-ms-input-placeholder {
  color: #AAAAAA;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c3 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  font-size: 22px;
  line-height: 28px;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c4:focus >circle,
.c4:focus >ellipse,
.c4:focus >line,
.c4:focus >path,
.c4:focus >polygon,
.c4:focus >polyline,
.c4:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c4:focus ::-moz-focus-inner {
  border: 0;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c1 {
  position: relative;
  width: 100%;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c2"
        placeholder="mm/dd/yyyy"
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c3"
        placeholder="mm/dd/yyyy"
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c4"
        placeholder="mm/dd/yyyy"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput next and previous without options 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput next and previous without options 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 gTmUcZ"
  >
    <input
      autocomplete="off"
      class="StyledMaskedInput-sc-99vkfa-0 bvQnDA"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput option via keyboard 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput option via mouse 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.375rem;
  line-height: 1.75rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  outline: none;
  border: none;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput option via mouse 2`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.12);
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c1 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 6px;
  position: fixed;
  z-index: 110;
  outline: none;
  background-color: #ffffff;
  color: #555555;
  margin-top: 6px;
  opacity: 0;
  transform-origin: top left;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

.c1 [class*=MaskedInput__ContainerBox] {
  padding-block: 6px;
  padding-inline: 6px;
  gap: 6px;
  display: flex;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 12px;
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 5px 12px;
  text-align: start;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  max-height: inherit;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="0"
  id="masked-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="c2 c3"
    id="listbox__item"
    role="listbox"
  >
    <div
      class="c4"
    >
      <button
        class="c5"
        id="listbox-option-0__item"
        tabindex="-1"
        type="button"
      >
        aa
      </button>
    </div>
    <div
      class="c4"
    >
      <button
        class="c5"
        id="listbox-option-1__item"
        tabindex="-1"
        type="button"
      >
        bb
      </button>
    </div>
  </div>
</div>
`;

exports[`MaskedInput option via mouse 3`] = `""`;

exports[`MaskedInput option via mouse 4`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 gTmUcZ"
  >
    <input
      aria-activedescendant="listbox-option--1__item"
      aria-autocomplete="list"
      aria-controls="listbox__item"
      aria-expanded="true"
      autocomplete="off"
      class="StyledMaskedInput-sc-99vkfa-0 biiwE"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder="!"
      role="combobox"
      value="aa!"
    />
  </div>
</div>
`;

exports[`MaskedInput renders a11yTitle and aria-label 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      aria-label="masked-input-test"
      autocomplete="off"
      class="c2"
      name="item"
      placeholder=""
      value=""
    />
  </div>
  <div
    class="c1"
  >
    <input
      aria-label="masked-input-test-2"
      autocomplete="off"
      class="c2"
      name="item"
      placeholder=""
      value=""
    />
  </div>
</div>
`;

exports[`MaskedInput renders size 1`] = `
HTMLCollection [
  .c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c3 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c3:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.5rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c4:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c4:focus >circle,
.c4:focus >ellipse,
.c4:focus >line,
.c4:focus >path,
.c4:focus >polygon,
.c4:focus >polyline,
.c4:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c4:focus ::-moz-focus-inner {
  border: 0;
}

.c4::-webkit-input-placeholder {
  color: #676767;
}

.c4::-moz-placeholder {
  color: #676767;
}

.c4:-ms-input-placeholder {
  color: #676767;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c4::-webkit-input-placeholder {
  font-weight: 400;
}

.c4::-moz-placeholder {
  font-weight: 400;
}

.c4:-ms-input-placeholder {
  font-weight: 400;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.375rem;
  line-height: 1.75rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #676767;
}

.c5::-moz-placeholder {
  color: #676767;
}

.c5:-ms-input-placeholder {
  color: #676767;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  font-weight: 400;
}

.c5::-moz-placeholder {
  font-weight: 400;
}

.c5:-ms-input-placeholder {
  font-weight: 400;
}

.c6 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.5rem;
  line-height: 1.875rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6::-webkit-input-placeholder {
  color: #676767;
}

.c6::-moz-placeholder {
  color: #676767;
}

.c6:-ms-input-placeholder {
  color: #676767;
}

.c6 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c6::-moz-focus-inner {
  border: none;
  outline: none;
}

.c6:-moz-placeholder,
.c6::-moz-placeholder {
  opacity: 1;
}

.c6::-webkit-input-placeholder {
  font-weight: 400;
}

.c6::-moz-placeholder {
  font-weight: 400;
}

.c6:-ms-input-placeholder {
  font-weight: 400;
}

.c7 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 2.25rem;
  line-height: 2.5rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c7:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c7:focus >circle,
.c7:focus >ellipse,
.c7:focus >line,
.c7:focus >path,
.c7:focus >polygon,
.c7:focus >polyline,
.c7:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c7:focus ::-moz-focus-inner {
  border: 0;
}

.c7::-webkit-input-placeholder {
  color: #676767;
}

.c7::-moz-placeholder {
  color: #676767;
}

.c7:-ms-input-placeholder {
  color: #676767;
}

.c7 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c7::-moz-focus-inner {
  border: none;
  outline: none;
}

.c7:-moz-placeholder,
.c7::-moz-placeholder {
  opacity: 1;
}

.c7::-webkit-input-placeholder {
  font-weight: 400;
}

.c7::-moz-placeholder {
  font-weight: 400;
}

.c7:-ms-input-placeholder {
  font-weight: 400;
}

.c8 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 34px;
  line-height: 40px;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c8:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c8:focus >circle,
.c8:focus >ellipse,
.c8:focus >line,
.c8:focus >path,
.c8:focus >polygon,
.c8:focus >polyline,
.c8:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c8:focus ::-moz-focus-inner {
  border: 0;
}

.c8::-webkit-input-placeholder {
  color: #676767;
}

.c8::-moz-placeholder {
  color: #676767;
}

.c8:-ms-input-placeholder {
  color: #676767;
}

.c8 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c8::-moz-focus-inner {
  border: none;
  outline: none;
}

.c8:-moz-placeholder,
.c8::-moz-placeholder {
  opacity: 1;
}

.c8::-webkit-input-placeholder {
  font-weight: 400;
}

.c8::-moz-placeholder {
  font-weight: 400;
}

.c8:-ms-input-placeholder {
  font-weight: 400;
}

.c9 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 2.625rem;
  line-height: 2.875rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c9:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c9:focus >circle,
.c9:focus >ellipse,
.c9:focus >line,
.c9:focus >path,
.c9:focus >polygon,
.c9:focus >polyline,
.c9:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c9:focus ::-moz-focus-inner {
  border: 0;
}

.c9::-webkit-input-placeholder {
  color: #676767;
}

.c9::-moz-placeholder {
  color: #676767;
}

.c9:-ms-input-placeholder {
  color: #676767;
}

.c9 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c9::-moz-focus-inner {
  border: none;
  outline: none;
}

.c9:-moz-placeholder,
.c9::-moz-placeholder {
  opacity: 1;
}

.c9::-webkit-input-placeholder {
  font-weight: 400;
}

.c9::-moz-placeholder {
  font-weight: 400;
}

.c9:-ms-input-placeholder {
  font-weight: 400;
}

.c10 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 3rem;
  line-height: 3rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c10:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10::-webkit-input-placeholder {
  color: #676767;
}

.c10::-moz-placeholder {
  color: #676767;
}

.c10:-ms-input-placeholder {
  color: #676767;
}

.c10 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c10::-moz-focus-inner {
  border: none;
  outline: none;
}

.c10:-moz-placeholder,
.c10::-moz-placeholder {
  opacity: 1;
}

.c10::-webkit-input-placeholder {
  font-weight: 400;
}

.c10::-moz-placeholder {
  font-weight: 400;
}

.c10:-ms-input-placeholder {
  font-weight: 400;
}

.c11 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 4.5rem;
  line-height: 4.5rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c11:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11::-webkit-input-placeholder {
  color: #676767;
}

.c11::-moz-placeholder {
  color: #676767;
}

.c11:-ms-input-placeholder {
  color: #676767;
}

.c11 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c11::-moz-focus-inner {
  border: none;
  outline: none;
}

.c11:-moz-placeholder,
.c11::-moz-placeholder {
  opacity: 1;
}

.c11::-webkit-input-placeholder {
  font-weight: 400;
}

.c11::-moz-placeholder {
  font-weight: 400;
}

.c11:-ms-input-placeholder {
  font-weight: 400;
}

.c12 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 16px;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c12:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12::-webkit-input-placeholder {
  color: #676767;
}

.c12::-moz-placeholder {
  color: #676767;
}

.c12:-ms-input-placeholder {
  color: #676767;
}

.c12 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c12::-moz-focus-inner {
  border: none;
  outline: none;
}

.c12:-moz-placeholder,
.c12::-moz-placeholder {
  opacity: 1;
}

.c12::-webkit-input-placeholder {
  font-weight: 400;
}

.c12::-moz-placeholder {
  font-weight: 400;
}

.c12:-ms-input-placeholder {
  font-weight: 400;
}

.c13 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c13:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c13:focus >circle,
.c13:focus >ellipse,
.c13:focus >line,
.c13:focus >path,
.c13:focus >polygon,
.c13:focus >polyline,
.c13:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c13:focus ::-moz-focus-inner {
  border: 0;
}

.c13::-webkit-input-placeholder {
  color: #676767;
}

.c13::-moz-placeholder {
  color: #676767;
}

.c13:-ms-input-placeholder {
  color: #676767;
}

.c13 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c13::-moz-focus-inner {
  border: none;
  outline: none;
}

.c13:-moz-placeholder,
.c13::-moz-placeholder {
  opacity: 1;
}

.c13::-webkit-input-placeholder {
  font-weight: 400;
}

.c13::-moz-placeholder {
  font-weight: 400;
}

.c13:-ms-input-placeholder {
  font-weight: 400;
}

.c14 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 100%;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
}

.c14:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c14:focus >circle,
.c14:focus >ellipse,
.c14:focus >line,
.c14:focus >path,
.c14:focus >polygon,
.c14:focus >polyline,
.c14:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c14:focus ::-moz-focus-inner {
  border: 0;
}

.c14::-webkit-input-placeholder {
  color: #676767;
}

.c14::-moz-placeholder {
  color: #676767;
}

.c14:-ms-input-placeholder {
  color: #676767;
}

.c14 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c14::-moz-focus-inner {
  border: none;
  outline: none;
}

.c14:-moz-placeholder,
.c14::-moz-placeholder {
  opacity: 1;
}

.c14::-webkit-input-placeholder {
  font-weight: 400;
}

.c14::-moz-placeholder {
  font-weight: 400;
}

.c14:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c2"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c3"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c4"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c5"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c6"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c7"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c8"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c9"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c10"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c11"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c11"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c12"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c13"
        placeholder=""
        value=""
      />
    </div>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c14"
        placeholder=""
        value=""
      />
    </div>
  </div>,
]
`;

exports[`MaskedInput textAlign end 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  text-align: right;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="off"
      class="c2"
      placeholder=""
      value="1234"
    />
  </div>
</div>
`;

exports[`MaskedInput with no mask 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  font-size: 1.375rem;
  line-height: 1.75rem;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  outline: none;
  border: none;
}

.c2:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 2px 2px #ffffff;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #676767;
}

.c2::-moz-placeholder {
  color: #676767;
}

.c2:-ms-input-placeholder {
  color: #676767;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  font-weight: 400;
}

.c2::-moz-placeholder {
  font-weight: 400;
}

.c2:-ms-input-placeholder {
  font-weight: 400;
}

.c1 {
  position: relative;
  width: 100%;
}

.c1 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="off"
      class="c2"
      data-testid="test-input"
      id="item"
      name="item"
      placeholder=""
      value=""
    />
  </div>
</div>
`;
